[package]
name = "cli"
version = "0.1.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2021"
description = "Defluencer Command Line Interface."

[dependencies]
cid = "0.8"
clap = { version = "3", default-features = false, features = ["std", "derive"] }
core = { path = "../core" }
either = {version = "1.6", features = ["serde"]}
futures-util = "0.3"
hex = "0.4"
hyper = { version = "0.14", features = ["http1", "server", "runtime", "stream"] }
ipfs-api = { path = "../ipfs-api" }
linked-data = { path = "../linked-data" }
mime_guess = "2.0"
m3u8-rs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["signal", "macros", "process", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io-util"] }
