[package]
name = "cli"
version = "0.1.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2021"
description = "Defluencer Command Line Interface."

[dependencies]
cid = "0.9"
clap = { version = "4", default-features = true, features = ["derive"] }
defluencer = { path = "../defluencer" }
futures-util = "0.3"
heck = { version = "0.4", default-features = false, features = [] }
hex = "0.4"
hyper = { version = "0.14", features = ["http1", "server", "runtime", "stream"] }
ipfs-api = { path = "../ipfs-api" }
linked-data = { path = "../linked-data" }
mime_guess = "2.0"
m3u8-rs = "5.0"
tokio = { version = "1", features = ["signal", "macros", "process", "rt-multi-thread", "sync"] }
