[package]
name = "cli"
version = "0.1.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2021"
description = "Defluencer Command Line Interface."

[dependencies]
cid = "0.10"
clap = { version = "4", default-features = true, features = ["derive"] }
defluencer = { path = "../defluencer" }
futures-util = "0.3"
heck = { version = "0.4", default-features = false, features = [] }
hex = "0.4"
http-body-util = { version = "0.1", default-features = false, features = [] }
hyper = { version = "1", default-features = false, features = ["server", "http1"] }
hyper-util = { version = "0.1", default-features = false, features = ["server-auto", "tokio"] }
ipfs-api = { path = "../ipfs-api" }
linked-data = { path = "../linked-data" }
mime_guess = "2.0"
m3u8-rs = "5.0"
tokio = { version = "1", features = ["signal", "macros", "process", "rt-multi-thread", "sync"] }
