[package]
name = "dag-jose"
version = "0.1.0"
edition = "2021"

[dependencies]
cid = { version = "0.8", default-features = false, features = ["alloc"] }
ed25519 = { version = "1", default-features = false, features = [] }
ed25519-dalek = { version = "1", default-features = false, features = ["u64_backend"] }
elliptic-curve = { version = "0.12", default-features = false, features = [] }
multibase = { version = "0.9", default-features = false, features = [] }
k256 = { version = "0.11", default-features = false, features = ["std", "ecdsa"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
signature = { version = "1", default-features = false, features = [] }
thiserror = { version = "1", default-features = false, features = [] }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
#rand_core = { version = "0.5", features = ["getrandom"] }
ed25519-dalek = { version = "1", features = ["rand"] }
k256 = { version = "0.11", features = [] }