[package]
name = "ipfs-api"
description = "Ipfs api for WASM and Desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1", default-features = false, features = [] }
cid = { version = "0.8", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
reqwest = { git = "https://github.com/SionoiS/reqwest", branch = "stream", default-features = false, features = ["multipart", "stream"]}
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
url = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ['full']}

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-test = "0.3.28"
web-sys = { version = "0.3", features = ['console']}