[package]
name = "ipfs-api"
version = "0.1.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2021"
description = "Ipfs api for WASM and Desktop"

[dependencies]
bytes = { version = "1", default-features = false, features = [] }
cid = { version = "0.8", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["io"] }
linked-data = { path = "../linked-data" }
reqwest = { version = "0.11.11", git = "https://github.com/tmpfs/reqwest", branch = "wasm-bytes-stream", default-features = false, features = ["multipart", "stream"]}
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
strum = { version = "0.24", features = ["derive"] }
thiserror = { version = "1", default-features = false, features = [] }
url = { version = "2", default-features = false, features = [] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ['full']}

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-test = "0.3.28"
web-sys = { version = "0.3", features = ['console']}