[package]
name = "ipns-records"
version = "0.1.0"
edition = "2021"

[dependencies]
async-signature =  { version = "0.4", default-features = false, features = [] }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "wasmbind"] }
cid = { version = "0.10", default-features = false, features = ["std"] }
ecdsa = { version = "0.16", default-features = false, features = ["pem"] }
ed25519 = { version = "2", default-features = false, features = [] }
ed25519-dalek = { version = "2", default-features = false, features = [] }
elliptic-curve = { version = "0.13", default-features = false, features = ["std"] }
multihash = { version = "0.18", default-features = false, features = [] }
serde_ipld_dagcbor = { version = "0.4", default-features = false, features = ["std"]}
k256 = { version = "0.13", default-features = false, features = ["std", "ecdsa"] }
prost = { version = "0.12", default-features = false, features = ["std", "prost-derive"] }
p256 = { version = "0.13", default-features = false, features = ["std", "ecdsa", "pkcs8"] }
serde = { version = "1", default-features = false, features = [] }
sha2 = { version = "0.10", default-features = false, features = [] }
signature = { version = "2", default-features = false, features = ["std", "digest", "derive"] }
spki = { version = "0.7", default-features = false, features = [] }
strum = { version = "0.25", default-features = false, features = ["derive"] }
thiserror = { version = "1", default-features = false, features = [] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", default-features = false, features = ["js"] }

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }