[package]
name = "linked-data"
version = "0.1.0"
authors = ["SionoiS <SionoiS@users.noreply.github.com>"]
edition = "2021"
description = "Defluencer linked data."

[dependencies]
bitvec = { version = "1", default-features = false, features = ["std", "serde"] }
either = { version = "1", default-features = false, features = ["serde"] }
cid = { version = "0.8", default-features = false, features = ["std"] }
prost = { version = "0.10", default-features = false, features = ["prost-derive"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
serde_with = { version = "2", default-features = false, features = ["macros"] }
strum = { version = "0.24", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1"